Added code to get multiorgs org -> software channel ents page work with flex entitlements